--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     </header>
     <main>
         <section id="primeiro">
-            <img src="" alt="" id="img1">
+            <img src="imagens/eu-ponte-300.jpg" alt="Herbert em uma ponte" id="img1">
             <article>
                 <h1>Teste</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi quibusdam officia voluptas beatae rerum id suscipit sunt similique quaerat autem delectus, nam atque dicta? Maxime porro ipsa voluptas tempore nobis!</p>
             </article>
-            <img src="" alt="" id="img2">
+            <img src="imagens/astronauta-foguete-300.png" alt="" id="img2">
         </section>
         
         <section id="segundo">
-            <img src="" alt="" id="img2">
+            <img src="imagens/astronauta-lua-300.png" alt="" id="img2">
             <article>
                 <h1>Teste</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem accusantium veritatis, ipsa omnis rerum doloremque reprehenderit, reiciendis atque odit dignissimos expedita explicabo libero laboriosam distinctio corrupti amet sequi. Minus, earum?</p>
             </article>
-            <img src="" alt="" id="img1">
+            <img src="imagens/Eu-nasa-300.jpg" alt="Herbert no museu da nasa" id="img1">
         </section>
 
         <section id="instagram">
@@ -83,7 +83,7 @@
         </section>
     </main>
     <footer>
-
+        <p>Site criado por HerbertCM</p>
     </footer>
 </body>
 </html>
