Tela de até 800px

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="imagens/eu-ponte-300.jpg" alt="Herbert em uma ponte" id="img1">
             <article>
                 <h1>Sobre mim</h1>
-                <p>Tenho 23 anos e sou apaixonado por programação. Acredito que a melhor forma de evoluir é estudando constantemente, por isso estou sempre buscando novos conhecimentos e desafios na área. Programar, para mim, é mais do que uma profissão — é um propósito.</p>
+                <p id="primeiro">Tenho 23 anos e sou apaixonado por programação. Acredito que a melhor forma de evoluir é estudando constantemente, por isso estou sempre buscando novos conhecimentos e desafios na área. Programar, para mim, é mais do que uma profissão — é um propósito.</p>
             </article>
             <img src="imagens/astronauta01-300.png" alt="" id="img2">
         </section>
@@ -25,7 +25,7 @@
             <img src="imagens/astronauta02-300.png" alt="" id="img2">
             <article>
                 <h1>Profissão</h1>
-                <p>Atualmente estudando desenvolvimento de software. Desenvolvedor dedicado, com forte capacidade de aprendizado contínuo, proatividade na resolução de problemas e excelente colaboração em ambientes de equipe. Comprometido com boas práticas de programação, qualidade de código e constante evolução técnica.</p>
+                <p id="segundo">Cursando desenvolvimento de software. Desenvolvedor dedicado, com forte capacidade de aprendizado contínuo, proatividade na resolução de problemas e excelente colaboração em ambientes de equipe. Comprometido com boas práticas de programação, qualidade de código e constante evolução técnica.</p>
             </article>
             <img src="imagens/Eu-nasa-300.jpg" alt="Herbert no museu da nasa" id="img1">
         </section>
