--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <a href="paginas/homenagem.html" target="nome">Homenagem</a>
             </div>
             <div id="lua2">
-                <a href="" target="nome">Clique</a>
+                <a href="paginas/receitas.html" target="nome">Receitas</a>
             </div>
             <div id="lua3">
                 <a href="" target="nome">Clique</a>
